<resources>
    <string name="search_connections">人脉</string>
    <string name="chat_list">消息</string>
    <string name="find">发现</string>
    <string name="me">我</string>
    <string name="input_phone">请输入手机号</string>
    <string name="input_pwd">请输入密码</string>
    <string name="forget_pwd">忘记密码</string>
    <string name="phone_register">手机注册</string>
    <string name="login">登录</string>

    <!--腾讯IM time -->
    <string name="time_yesterday">昨天</string>
    <string name="time_day">日</string>
    <string name="time_month">月</string>
    <string name="time_year">年</string>

    <!--腾讯IM ChatInput-->

    <string name="file_not_found">未找到文件，请稍后重试</string>
    <string name="need_permission">您需要开启权限,并重启应用</string>


</resources>
