<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fillViewport="true"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#fff"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

        <com.hudong.wemedia.basiccomponent.widgets.CircleTextImageView
            android:id="@+id/login_logo"
            android:layout_width="85.0dip"
            android:layout_height="85.0dip"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_margin="35dp"
            app:citv_border_color="@android:color/white"
            app:citv_border_width="2.0dip"
            app:citv_fill_color="#ff38adff"
            app:citv_text_color="@android:color/black"
            app:citv_text_size="18.0sp"
            app:citv_text_text="新用户" />

        <RelativeLayout
            android:id="@+id/ll_login_user"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/login_logo"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <ImageView
                android:id="@+id/iv_phone_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:src="@drawable/phone2" />

            <EditText
                android:id="@+id/et_login_phone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@id/iv_phone_icon"
                android:background="@null"
                android:gravity="center_vertical"
                android:hint="@string/input_phone"
                android:inputType="number"
                android:textColor="@color/text_black"
                android:textColorHint="@color/text_gray"
                android:textSize="15sp" />

            <ImageView
                android:id="@+id/iv_login_phone_clean"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@drawable/erase"
                android:visibility="gone" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:background="@drawable/child_divider_horizontal" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/ll_login_pwd"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/ll_login_user"
            android:layout_marginTop="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <ImageView
                android:id="@+id/iv_pwd_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:src="@drawable/password2" />

            <EditText
                android:id="@+id/et_login_pwd"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_toLeftOf="@+id/tv_forget_pwd"
                android:layout_toRightOf="@id/iv_pwd_icon"
                android:background="@null"
                android:hint="@string/input_pwd"
                android:inputType="textPassword"
                android:textColor="@color/text_black"
                android:textColorHint="@color/text_gray"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tv_forget_pwd"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:gravity="center_vertical"
                android:text="@string/forget_pwd"
                android:textColor="@color/text_gray"
                android:visibility="gone" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:background="@drawable/child_divider_horizontal" />

        </RelativeLayout>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@id/ll_login_pwd"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/btn_circular_rectangle_bg"
            android:text="@string/login"
            android:textColor="#fff"
            android:textSize="15sp" />

        <Button
            android:id="@+id/btn_forget_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@id/btn_login"
            android:layout_marginRight="20dp"
            android:layout_marginTop="5dp"
            android:background="@null"
            android:text="忘记密码?"
            android:textColor="#38ADFF"
            android:textSize="15sp" />

        <Button
            android:id="@+id/btn_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/btn_login"
            android:layout_below="@id/btn_login"
            android:layout_marginTop="5dp"
            android:background="@null"
            android:text="@string/phone_register"
            android:textColor="#38ADFF"
            android:textSize="15sp" />

        <View
            android:id="@+id/liner_driver"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/btn_forget_password"
            android:layout_marginTop="55dp"
            android:background="#f2f2f2" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/liner_driver"
            android:layout_marginTop="@dimen/margin_10"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/disanfen_denglu_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="@dimen/margin_10"
                android:gravity="center"
                android:text="快捷登录" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/disanfen_denglu_label"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="5dp">

                <com.hudong.wemedia.basiccomponent.widgets.CircleImageView
                    android:id="@+id/rl_wx_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:src="@drawable/wx_login" />

            </LinearLayout>
        </RelativeLayout>


    </RelativeLayout>

</ScrollView>